# Geometry-Image

./: CMakeLists.txt  README.md  所需第三方库.txt
include/: CGAL_cut_utils.h  GI_utils.h  cgal_IO.h  cgal_include.h  square_border_parameterization.h  square_grid_border_parameterizer.h
src/: CGAL_cut_utils.cpp  GI_utils.cpp  cgal_IO.cpp  cgal_include.cpp  cut_utils.hpp  main.cpp  parameterization.hpp  square_border_parameterization.cpp
